# src/RMS.Identity.Service.Api/Endpoint/Companies/UpdateCompanyUser/UpdateCompanyUserResponse.cs
@@ -1,0 +1,10 @@
+namespace RMS.Identity.Service.Api.Endpoint.Companies.UpdateCompanyUser;
+
+public sealed record UserResponse(
+    Guid UserUuid,
+    string Username,
+    string? DisplayName,
+    IReadOnlyCollection<string> Roles,
+    string? CompanyRole,
+    string Status,
+    DateTime CreatedAt);
