# src/RMS.Identity.Service.Domain/Contracts/CompanyUsers/UpdateCompanyUserCommandRequest.cs
@@ -1,0 +1,10 @@
+using RMS.Identity.Service.Infrastructure.Cqrs;
+
+namespace RMS.Identity.Service.Domain.Contracts.CompanyUsers;
+
+public sealed record UpdateCompanyUserCommandRequest(
+    Guid ActorUserUuid,
+    Guid CompanyUuid,
+    Guid UserUuid,
+    string CompanyRole,
+    string MembershipStatus) : ICommand<UpdateCompanyUserCommandResponse>;
